aws/cloudformations/ec2_instance_with_chrome_desktop_env/cloudformation.json
{
  "Resources": {
    "cfVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true"
      }
    },
    "cfSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "cfVPC"
        },
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": true,
        "AvailabilityZone": "ap-south-1a"
      }
    },
    "cfSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "cfVPC"
        },
        "CidrBlock": "10.0.9.0/24",
        "MapPublicIpOnLaunch": true,
        "AvailabilityZone": "ap-south-1b"
      }
    },
    "ec2WithVnc": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-03f4878755434977f",
        "InstanceType": "t2.micro",
        "KeyName": "kp1",
        "UserData": {
          "Fn::Sub": "IyEvYmluL2Jhc2gKYXB0IHVwZGF0ZSAteQphcHQtZ2V0IGluc3RhbGwgLXkgYXBhY2hlMgpzZXJ2aWNlIGFwYWNoZTIgc3RhcnQKY2F0IDw8RU9GID4gL3Zhci93d3cvaHRtbC9pbmRleC5odG1sCjwhRE9DVFlQRSBodG1sPgo8aHRtbD4KPGhlYWQ+Cjx0aXRsZT5QbGVhc2Ugd2FpdCB3aGlsZSBzdGFydHVwIHNjcmlwdCBjb21wbGV0ZXM8L3RpdGxlPgo8L2hlYWQ+Cjxib2R5Pgo8aDE+UGxlYXNlIHdhaXQgd2hpbGUgc3RhcnR1cCBzY3JpcHQgY29tcGxldGVzLi48L2gxPgo8aDI+VmlkZW8gVHV0b3JpYWw8L2gyPgo8aWZyYW1lIHdpZHRoPSI3MjgiIGhlaWdodD0iNDQ3IiBzcmM9Imh0dHBzOi8vd3d3LnlvdXR1YmUuY29tL2VtYm [...]
        },
        "IamInstanceProfile": {
          "Ref": "cfInstanceProfile"
        },
        "NetworkInterfaces": [
          {
            "DeviceIndex": "0",
            "AssociatePublicIpAddress": "true",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "cfSubnet1"
            },
            "GroupSet": [
              {
                "Ref": "MySecurityGroup"
              }
            ]
          }
        ]
      }
    },
    "MySecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "cfVPC"
        },
        "GroupDescription": "Allow SSH and HTTP traffic",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 5901,
            "ToPort": 5901,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "MyInternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {}
    },
    "GatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "cfVPC"
        },
        "InternetGatewayId": {
          "Ref": "MyInternetGateway"
        }
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "cfVPC"
        }
      }
    },
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "GatewayAttachment",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MyInternetGateway"
        }
      }
    },
    "PublicSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "cfSubnet1"
        },
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        }
      }
    },
    "MyNetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "cfVPC"
        }
      }
    },
    "MyNetworkAclEntryIngress1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "MyNetworkAcl"
        },
        "RuleNumber": 100,
        "Protocol": "6",
        "RuleAction": "allow",
        "CidrBlock": "0.0.0.0/0",
        "Egress": false,
        "PortRange": {
          "From": 22,
          "To": 22
        }
      }
    },
    "MyNetworkAclEntryEgress1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "MyNetworkAcl"
        },
        "RuleNumber": 100,
        "Protocol": "6",
        "RuleAction": "allow",
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "PortRange": {
          "From": 22,
          "To": 22
        }
      }
    },
    "cfInstanceProfile": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "awsXrayRole"
          }
        ]
      }
    },
    "awsXrayRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com"
              },
              "Action": "sts:AssumeRole"
            }
          ]
        },
        "Path": "/",
        "Policies": [
          {
            "PolicyName": "XrayWriteOnlyAccess",
            "PolicyDocument": {
              "Version": "2012-10-17",
              "Statement": [
                {
                  "Effect": "Allow",
                  "Action": [
                    "xray:PutTraceSegments",
                    "xray:PutTelemetryRecords",
                    "xray:GetSamplingRules",
                    "xray:GetSamplingTargets",
                    "xray:GetSamplingStatisticSummaries"
                  ],
                  "Resource": "*"
                },
                {
                  "Effect": "Allow",
                  "Action": [
                    "s3:GetObject"
                  ],
                  "Resource": "arn:aws:s3:::my-bucket-for-xray/my-file.txt"
                }
              ]
            }
          }
        ]
      }
    }
  }
}
